Reduce minimum Java version to 17
Uses some API that is deprecated in Java 21 but not 17. JreCompat has
not been used to avoid the deprecated API if running on Java 21+.